# taiyi

./: Makefile  README.md
.github/workflows/: ci.yml
crates/poi/: Cargo.toml
crates/poi/src/: main.rs
docs/node_operator_setup_guide/: installation_and_configuration.mdx
